changed to inputstream